--- a/templates/ScreeningApp/screening.html
+++ b/templates/ScreeningApp/screening.html
@@ -49,8 +49,11 @@
                     <label for="option_4">{{i.option_4|linebreaksbr}}</label><br><br>
                     {%endfor%}
                     {%endfor%}
-                    <!----<button formaction="screening_preview/{{screening_uuid}}">Preview&Save</button>-->
-                    <input type="submit" class="btn btn-succes btn-block" value="Save & Preview">
+                    <!--<button formaction="screening_preview/{{screening_uuid}}">Preview&Save</button>-->
+                    <!--<input type="submit" class="btn btn-succes btn-block" value="Save & Preview">-->
+                    <button type="submit" id="btn_submit" style="font-size: 17.5px;" class="btn btn-succes btn-block">Save & Preview</button>
+
+
                 </form>
             </section>
             <!--contents -->
