--- a/templates/ScreeningApp/screening_result_pass.html
+++ b/templates/ScreeningApp/screening_result_pass.html
@@ -19,12 +19,13 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-                <h3>Congratulations !!</h3>
+                <h3 style="font-weight:500;">Congratulations !!</h3>
 
-                <h3>You passed with flying colours. If you want to check your performance, you can do it from <a href="feedback" target="_blank"> here.</a></h3>
+                <h3 style="font-weight:500;">You passed with flying colours. If you want to check your performance, you can do it from <a href="screening-status" target="_blank"> here.</a></h3>
 
-                <h3>One of our team members, will reach out to you directly to get you started. In the meanwhile, please check out the problem statements and ongoing projects <a href="https://www.hackforchange.co.in/projects" target="_blank">here.  </a> </h3>
            </div>
+            <h3 style="font-weight:500;">One of our team members, will reach out to you directly to get you started. In the meanwhile, please check out the problem statements and ongoing projects <a href="https://www.hackforchange.co.in/projects" target="_blank">here.  </a> </h3>
+
         </div>
     </div>
 <!-- Main Ends -->
