Swapped Centre and Chapter Text on Community Page

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -55,9 +55,9 @@
                 <div class="hfc-card">
                     <div class="hfc-card__fig"><img width="111" src="{% static 'images/hfc-img.jpg' %}" alt="Pic"></div>
                     <div class="hfc-card__info">
-                        <h3>Want to set up centre in your college?</h3>
+                        <h3>Want to set up chapter in your college?</h3>
                         <p class="small">Reach out to us directly to open a new
-                            centre of excellence at your own college premises.</p>
+                            chapter at your own college premises.</p>
                         <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                     </div>
                 </div>
@@ -80,9 +80,9 @@
                 <div class="hfc-card">
                     <div class="hfc-card__fig"><img width="111" src="{% static 'images/hfc-img.jpg' %}" alt="Pic"></div>
                     <div class="hfc-card__info">
-                        <h3>Don't see a chapter in your city?</h3>
+                        <h3>Don't see a centre in your city?</h3>
                         <p class="small">Lets create one, and get your city involved. As always, you can always join the
-                            nearest city chapter as well.</p>
+                            nearest city centre as well.</p>
                         <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                     </div>
                 </div>
