--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -27,11 +27,11 @@
         <ul class="tab-sec">
             <li class="active"><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}"
                         alt="ICON"><img width="27" src="{% static 'images/hfc-icon1-alt.svg' %}" alt="ICON"><span>HFC
-                        Centres</span></a>
+                        Chapters</span></a>
             </li>
             <li><a href="#hfcChapters"><img width="48" src="{% static 'images/hfc-icon2.svg' %}" alt="ICON"><img
                         width="48" src="{% static 'images/hfc-icon2-alt.svg' %}" alt="ICON"><span>HFC
-                        Chapters</span></a></li>
+                        Centres</span></a></li>
             <li><a href="#hfcLeaderboard"><img width="23" src="{% static 'images/hfc-icon3.svg' %}" alt="ICON"><img
                         width="23" src="{% static 'images/hfc-icon3-alt.svg' %}" alt="ICON"><span>Leaderboard</span></a>
             </li>
