Swapped Centre and Chapter sub-heading on Community Page

--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -17,7 +17,7 @@
         <div class="banner__main">
             <h1>Signup as a Member</h1>
             <p class="large">
-                Inviting students from {{center.organization_name}} to join college specific centres
+                Inviting working professionals from various cities to join city specific centres
             </p>
         </div>
     </div>
