--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="footer__menu">
                     <p class="small bold">Get In Touch</p>
-                    <address>402 Abhis Hiranya <br>Kavuri Hills, Madhapur <br>Hyderabad - 500 033</address>
+                    <address>G1, Vishnu Nest <br>Image Gardens Rd, Madhapur <br>Hyderabad - 500 081</address>
                     <p><a href="mailto:contact@hackforchange.co.in"><i> <img width="24"
                                     src="{% static 'images/envelope-icon-w.svg' %}"
                                     alt="icon"></i>contact@hackforchange.co.in</a></p>
