--- a/templates/ScreeningApp/thanks.html
+++ b/templates/ScreeningApp/thanks.html
@@ -18,7 +18,7 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h3>Thanks for attending the test.<br>
+               <h3 style="font-weight:500;">Thanks for attending the test.<br>
                 We will get back to you shortly!!!</h3>
            </div>
         </div>
