--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -28,10 +28,12 @@
     <div class="content-width">
         <div class="main">
             <section id="contents">
+            {% if center.logo %}
                 <div class="uni-chapter"><img width="84px" src={{center.logo.url}}
                         srcset="images/dit_university_logo@2x.jpg 2x, images/dit_university_logo@3x.jpg 3x">
                     <h2>{{center.organization_name}}</h2>
                 </div>
+                {% endif %}
                 <form class="site-form" method="post" id="volform" sub-change-url="{% url 'load_area_of_expertise' %}">
                     {%csrf_token%}
                     <div class="form-control">
