--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -48,7 +48,7 @@
                         <div class="main__community-sec">
                             <p class="large sbold">{{center.organization_name}}</p>
                             <p>{{center.project.count}} Projects, {{center.community_member_set.count}} Members</p>
-                            <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--hfc"
+                            <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--border"
                                 id="center_contrib">Join as a member</a>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                         <div class="main__community-sec">
                             <p class="large sbold">{{chapter.organization_name}}</p>
                             <p>{{chapter.project.count}} Projects, {{chapter.community_member_set.count}} Members</p>
-                            <a href="{{chapter.organization_name_slug}}/signup/" class="btn btn--border">Join as a
+                            <a href="{{chapter.organization_name_slug}}/signup/" class="btn btn--hfc">Join as a
                                 member</a>
                         </div>
                     </div>
