--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -27,11 +27,11 @@
         <ul class="tab-sec">
             <li class="active"><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}"
                         alt="ICON"><img width="27" src="{% static 'images/hfc-icon1-alt.svg' %}" alt="ICON"><span>HFC
-                        Chapters</span></a>
+                        Centres</span></a>
             </li>
             <li><a href="#hfcChapters"><img width="48" src="{% static 'images/hfc-icon2.svg' %}" alt="ICON"><img
                         width="48" src="{% static 'images/hfc-icon2-alt.svg' %}" alt="ICON"><span>HFC
-                        Centres</span></a></li>
+                        Chapters</span></a></li>
             <li><a href="#hfcLeaderboard"><img width="23" src="{% static 'images/hfc-icon3.svg' %}" alt="ICON"><img
                         width="23" src="{% static 'images/hfc-icon3-alt.svg' %}" alt="ICON"><span>Leaderboard</span></a>
             </li>
@@ -56,10 +56,11 @@
                 </div>
                 <div class="hfc-card">
                     <div class="hfc-card__fig"><img width="111" src="{% static 'images/hfc-img.jpg' %}" alt="Pic"></div>
+
                     <div class="hfc-card__info">
-                        <h3>Want to set up chapter in your college?</h3>
-                        <p class="small">Reach out to us directly to open a new
-                            chapter at your own college premises.</p>
+                        <h3>Don't see a centre in your city?</h3>
+                        <p class="small">Lets create one, and get your city involved. As always, you can always join the
+                            nearest city centre as well.</p>
                         <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                     </div>
                 </div>
@@ -84,9 +85,9 @@
                 <div class="hfc-card">
                     <div class="hfc-card__fig"><img width="111" src="{% static 'images/hfc-img.jpg' %}" alt="Pic"></div>
                     <div class="hfc-card__info">
-                        <h3>Don't see a centre in your city?</h3>
-                        <p class="small">Lets create one, and get your city involved. As always, you can always join the
-                            nearest city centre as well.</p>
+                        <h3>Want to set up chapter in your college?</h3>
+                        <p class="small">Reach out to us directly to open a new
+                            chapter at your own college premises.</p>
                         <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                     </div>
                 </div>
