Problem Statement Form,team notification feature #206 #208

--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -58,6 +58,26 @@
                     <div>
                         {{form.issue_area}}
                     </div>
+                    <br>
+
+                    <h2 style="padding-bottom: 20px;">Tell us about yourself</h2>    
+
+                    <div class="form-field">
+                        <label for="">Name</label>
+                        {{form.name}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">Email</label>
+                        {{form.email}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">Phone Number</label>
+                        {{form.phone_number}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">About Yourself</label>
+                        {{form.about_yourself}}
+                    </div>                   
                     <div class="btn-outer">
                         <input class="btn btn--info btn--full" type="submit" onClick="valthisform()" value="Submit">
                     </div>
