Problem Statement Internal Mail

--- a/templates/HFC/problem_statement_detail_internal_email.html
+++ b/templates/HFC/problem_statement_detail_internal_email.html
@@ -10,7 +10,8 @@
         <tr>
           <td>
             <p>A new problem statement was submitted by {{problem.name}} .</p>
-            <p>Mobile :{{problem.phone_number}} Email :{{problem.email}} </p>
+            <p>Mobile :{{problem.phone_number}}</p>
+            <p>Email :{{problem.email}} </p>
             <p>About :{{problem.about_yourself}}</p>
             <p>Problem Statement :{{problem.problem_statement}}</p>
             <p>Overview :{{problem.overview}}</p>              
