Footer Github Link Update

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -68,7 +68,7 @@
                 <ul>
                     <li><a href="https://twitter.com/HackForChangeIN"><img width="31"
                             src="{% static 'images/twitter-img.png' %}" alt="Icon"></a></li>
-                    <li><a href="https://github.com/CTSC/HFC"><img width="31"
+                    <li><a href="https://github.com/HackForChangeIN"><img width="31"
                             src="{% static 'images/github-img.png' %}" alt="Icon"></a></li>
 
                 </ul>
