Updated the Problem statement page #220

--- a/templates/HFC/problem_statement_detail_internal_email.html
+++ b/templates/HFC/problem_statement_detail_internal_email.html
@@ -9,7 +9,8 @@
       <table role="presentation" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td>
-            <p>A new problem statement was submitted by {{problem.name}} .</p>
+            <p>A new problem statement was submitted in issue area, {{problem.issuearea}}</p>
+            <p>Mobile :{{problem.name}}</p>
             <p>Mobile :{{problem.phone_number}}</p>
             <p>Email :{{problem.email}} </p>
             <p>About :{{problem.about_yourself}}</p>
