--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -46,10 +46,9 @@
                                 alt="Logo"></div>
                     {% endif %}
                         <div class="main__community-sec">
-                            <p class="large sbold">{{center.organization_name}}</p>
+                            <p class="large sbold"><a href="community/{{center.organization_name_slug}}">{{center.organization_name}}</a></p>
                             <p>{{center.project.count}} Projects, {{center.community_member_set.count}} Members</p>
-                            <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--border"
-                                id="center_contrib">Join as a member</a>
+                            <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--border" id="center_contrib">Join as a member</a>
                         </div>
                     </div>
                     {% endfor %}
@@ -74,7 +73,7 @@
                                 alt="Logo"></div>
                     {% endif %}
                         <div class="main__community-sec">
-                            <p class="large sbold">{{chapter.organization_name}}</p>
+                            <p class="large sbold"><a href="community/{{chapter.organization_name_slug}}">{{chapter.organization_name}}</a></p>
                             <p>{{chapter.project.count}} Projects, {{chapter.community_member_set.count}} Members</p>
                             <a href="{{chapter.organization_name_slug}}/signup/" class="btn btn--hfc">Join as a
                                 member</a>
