--- a/templates/HFC/community_center.html
+++ b/templates/HFC/community_center.html
@@ -35,9 +35,9 @@
         <div class="main">
             <section id="contents">
                 {% if center.logo %}
-                    <div class="main__community-fig squre-radius"><img width="85" src={{center.logo.url}}alt="Logo"></div>
+                    <div class="uni-chapter"><img width="84px" src={{center.logo.url}}></div>
                 {% else %}
-                <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}">
+                    <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}">
                 {% endif %}
                     <h2>{{center.type}} Leaderboard</h2>
                 </div>
