--- a/templates/HFC/community_chapter.html
+++ b/templates/HFC/community_chapter.html
@@ -31,10 +31,8 @@
                 {% if chapter.logo %}
                     <div class="main__community-fig squre-radius"><img width="85" src={{chapter.logo.url}}alt="Logo"></div>
                 {% else %}
-                <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}">
+                <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}"><h2> Leaderboard</h2></div>
                 {% endif %}
-                    <h2> Leaderboard</h2>
-                </div>
                 <section id="hfcLeaderboard">
                 <div class="unborder-table__outer">
                     <table class="unborder-table">
